[tool.poetry]
name = "Unleash"
version = "0.1.0"
description = "Unleash"
readme = "README.md"
authors = ["Nicholas Brochu <nicholas@serpent.ai>"]
license = "MIT"
repository = "https://github.com/SerpentAI/Unleash"
keywords = ["Image Processing"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
]
packages = [
    {include = "unleash"},
]
include = []

[tool.poetry.dependencies]
python = ">=3.8"

networkx = "~2.4"

numpy = "~1.18"

scikit-image = "~0.17"
pillow = "~7.1.2"

## PyTorch (with CUDA 10.1 to accomodate Tensorflow)
torch = [
    { url = "https://download.pytorch.org/whl/cu101/torch-1.5.0%2Bcu101-cp38-cp38-win_amd64.whl", markers = "sys_platform == 'win32'" },
    { url = "https://download.pytorch.org/whl/cu101/torch-1.5.0%2Bcu101-cp38-cp38-linux_x86_64.whl", markers = "sys_platform == 'linux'" },
]
torchvision = [
    { url = "https://download.pytorch.org/whl/cu101/torchvision-0.6.0%2Bcu101-cp38-cp38-win_amd64.whl", markers = "sys_platform == 'win32'" },
    { url = "https://download.pytorch.org/whl/cu101/torchvision-0.6.0%2Bcu101-cp38-cp38-linux_x86_64.whl", markers = "sys_platform == 'linux'" },
]

## Tensorflow
protobuf = "3.11.3"  # To resolve dependency issue...
tensorflow = "~2.2"

[tool.poetry.dev-dependencies]
ipython = "~7.14"
notebook = "~6.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"